--- a/style.css
+++ b/style.css
@@ -45,6 +45,82 @@ label {
     color:black;
 }
 
+#container {
+    position: relative;
+    width: 500px;
+    height: 500px;
+    outline: 2px dashed grey;
+}
+  
+#draggable {
+    position: absolute;
+    left: 150px;
+    top: 150px;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    
+}
+  
+#drag {
+    width: 10%;
+    height: 10%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto auto;
+    position: absolute;
+    border-radius: 50%;
+    background: radial-gradient(circle, #333, #444);
+    border: 3px solid rgba(200, 200, 200, 0.01);
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8);
+}
+  
+#rotate {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 50%;
+    background-color: grey;
+}
+
+#rotate::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 100%;
+    width: 1.4%;
+    background: linear-gradient(0deg, #333, #444, #333);
+    box-shadow: 0 0 2px 0 black;
+}
+
+#south {
+    top: 0;
+    right: 50;
+    bottom: 0;
+    left: 100%;
+    padding-left: 25px;
+    margin: auto;
+    position: absolute;
+    background: blue;
+    border: 3px solid rgba(200, 200, 200, 0.01);
+}
+
+#north {
+    top: 0;
+    left: 50;
+    bottom: 0;
+    right: 100%;
+    padding-right: 25px;
+    margin: auto;
+    position: absolute;
+    background:red;
+    border: 3px solid rgba(200, 200, 200, 0.01);
+}
+
 ::placeholder {
     color: black;
 }
@@ -53,4 +129,3 @@ label {
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
